--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <form action="">
             <h1 align="left">College Registration Form</h1>
+            <h3>IDI-ARABA SCHOOL</h3>
             <h4 align="left">Thank you for applying to our college. Please fill in the form below to complete the registration process for admission.</h4>
             <p>
             <label for="name">Name <span>*</span></label> <br>
