--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application form</title>
     <link rel="stylesheet" href="./form.css">
+     <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.0-dist/css/bootstrap.css">
 </head>
 <body>
     <form action="">
-            <h1 align="left">College Registration Form</h1>
-            <h3>IDI-ARABA SCHOOL</h3>
-            <h4 align="left">Thank you for applying to our college. Please fill in the form below to complete the registration process for admission.</h4>
+            <h1>College Registration Form</h1>
+            <h4>Thank you for applying to our college. Please fill in the form below to complete the registration process for admission.</h4>
             <p>
-            <label for="name">Name <span>*</span></label> <br>
-            <input type="text" id="name" placeholder="First Name" required>
-            <input type="text" id="name" placeholder="Last Name" required>
-        </p>
+        <div class="row">
+            <div class="col mb-3">
+            <label for="exampleFormControlInput1" class="form-label col">First Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Ada" required>
+            </div>
+            <div class="col mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Obi" required>
+            </div>
+        </div>
         <p>
             <label for="gender">Gender</label> <br>
-            <input type="radio" id="gender" name="gender"> Male
-            <input type="radio" id="gender" name="gender"> Female
+            <input class="inline" type="radio" id="gender" name="gender"> Male
+            <input class="inline" type="radio" id="gender" name="gender"> Female
         </p>
         <p>
             <label for="date">Birth Date</label> <br>
@@ -39,8 +46,8 @@
             <input type="text" id="address" placeholder="Street Address" required> <br> <br>
             <input type="text" id="address" placeholder="Street Address Line 2" required> <br> <br>
             <input type="text" id="address" placeholder="City" required> 
-            <input type="text" id="address" placeholder="State / Province" required> <br> <br>
-            <input type="text" id="address" placeholder="Postal / Zip Code" required>
+            <input class="inline" type="text" id="address" placeholder="State / Province" required> <br> <br>
+            <input class="inline" type="text" id="address" placeholder="Postal / Zip Code" required>
         </p>
         <p>
             <label for="nationality">Nationality<span>*</span></label> <br>
@@ -67,12 +74,15 @@
         </p>
         <p>
             <label for="training">Level of education</label> <br>
-            <input type="text" placeholder="Qualification">
-            <input type="date" placeholder="Date">
+            <input class="inline" type="text" placeholder="Qualification">
+            <input class="inline" type="date" placeholder="Date">
         </p> <br>
         <p align="center">
             <button>Submit Application</button>
         </p>
     </form>
+
+<script src="./bootstrap-5.3.0-dist/js/bootstrap.js"></script>
+<script src="./bootstrap-5.3.0-dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
